# ChangeLog for sys-apps/less
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*less-457.ebuild (10 Dec 2012)

  10 Dec 2012; Martin Väth <martin@mvath.de>
  Bump less version.

*less-456.ebuild (09 Nov 2012)

  09 Nov 2012; Martin Väth <martin@mvath.de>
  Bump less version.

*less-452.ebuild (23 Oct 2012)

  23 Oct 2012; Martin Väth <martin@mvath.de>
  Bump less version. Add USE=sources

*less-451.ebuild (23 Jul 2012)

  21 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  23 Jul 2012; Martin Väth <martin@mvath.de>
  Bump less version. Simplify doc install and pcre passing as in main tree.

*less-450.ebuild (16 Jul 2012)

  16 Jul 2012; Martin Väth <martin@mvath.de>
  Bump less version.

*less-449.ebuild (28 Jun 2012)

  28 Jun 2012; Martin Väth <martin@mvath.de>
  Bump less version.

*less-445-r1.ebuild (10 Nov 2011)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  02 Mar 2012; Martin Väth <martin@mvath.de>
  Change to github repository.

  31 Jan 2012; Martin Väth <martin@mvath.de>
  Bump lesspipe.sh from tree

  17 Nov 2011; Martin Väth <martin@mvath.de>
  Update editor dependency as in portage main tree

  10 Nov 2011; Martin Väth <martin@mvath.de>
  Follow revision upgrade from gentoo: support pcre
  Put keyfiles into ${EPREFIX}/etc/less subdirectories

*less-445.ebuild (28 Oct 2011)

  28 Oct 2011; Martin Väth <martin@mvath.de>
  Bump less version.

*less-444.ebuild (09 Jun 2011)

  09 Jun 2011; Martin Väth <martin@mvath.de>
  Bump less version. Remove old ebuild. Fix some typos concerning env.d

*less-443.ebuild (06 Jun 2011)

  06 Jun 2011; Martin Väth <martin@mvath.de>
  -less-select-443.ebuild +less-443.ebuild
  Rename into less to avoid problems with portage hard-depending on less.
  In fact, less-select is just less with additional options which therefore
  should be provided by a useflag.

*less-select-443.ebuild (11 Apr 2011)
