@@ -1,3 +1,3 @@
-DIST code2color 199875 SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d SHA512 d9cf24434bf105a138ee82652867aedb83dfe6bfea14d20337f97cf9d37ff9f370a4a7dd58bc7eb69de0f3b944d47c7d7e075f50098b0966e753f42b1b35c22f WHIRLPOOL cdb748e04663a6a109310da454ff5a245e6562ec8cdae03a35ca93095e40511707662c4743dcd922049838cac646d930e6b2d2878f26c328916bb3c9c60c5e8c
+DIST code2color-0.2 200711 SHA256 2365c9009b1cc3c30430b88775ec402164df105fd12364871d05dcaed20be954 SHA512 c0ab9f411d5a106c81334343e3c4a63b67d27b95e2d128145e3ac1ee46cd6c228c61796cf96e51826e69b3e465e7bdaa81b1a48cad934c23b310f2ea2ebd8e75 WHIRLPOOL d0207e84a5849c554b1dfc5882ab46d8afc411c7d26e912235ec05565880e6ed0db8449133502234a01ae8f59feae211486b6a523e37859d8404f72fff9b8f93
 DIST less-457.tar.gz 311207 SHA256 63c9c421df5c64439babc3aa44861512c298af394c932672b3e5aeb53580eed8 SHA512 6baa27996f36ccef965eee1bdc05c0e247d41e2af95a44fed93212b5608410e44c5a24e73d6c8a5aa542bb7aa41820d490febe14ffb4c9f13af5112708315db2 WHIRLPOOL 80669631eff59abcc3dfdd07021bb504a70575b930e68cbd4495a376db15e3120907f275ad28af834230c5b4f9b7eefb59d4563f6b07ab99fb8a6855157dedab
 DIST less-select-2.2.tar.gz 25047 SHA256 b9a35194fd6c188a9aedc6835b233f0e8078df0e309e39067c893b8b1f73141f SHA512 5ce36fa4e404ae626f9c96ffcf58b9188e0f12c6db0321d3f0ed8fe47593951d072e1da53b874e80fc39041ae8aa85d06d646215d7ad63c611cb096ff5ca9136 WHIRLPOOL ec5341dbb4292f3e776e32ba996ef2efe2aa89438d4f0907efecdcf234d27b2b0e149d43ebd6dee089365c20f2a0796497e5cceebf3f25b846c14e8f0d9e762e
