@@ -1,1 +1,1 @@
-DIST noscript-2.6.5.6.xpi 530992 SHA256 3af54c612e7c5dd3c013022076dcf9e2000b5a430fef5006313490c0309ecf37 SHA512 f3f6cf9bb3d552ae0c84be7325ae2eac5fe87ee0360c53142e2ab5bfbc1824fe160af749a7d31b267fdfd94760fe7961afdb1fe2716cce27655f2c38f3978050 WHIRLPOOL 926aa2bf17f0a6d382522f670992e70a15005f577400855dab388bf8670ab59a38ddc6d36415d7c9e72e55952c6da139b5af02f99013f18f22071d8eb7d95be2
+DIST noscript-2.6.5.7.xpi 530982 SHA256 7af142eeb270f26dc71c64fbe3882a950be35a568609466a4ab4c705b4ca9c71 SHA512 0978fb2b8c0c8a218b24e539d5dec66172cde10c89c8c9fb48ae8be9e401291f900dbb90dd6728429e62700eda50e3421ff1db2622bc20bd1d49e83f5b7235fc WHIRLPOOL b37d1cd40aa5ba87a0cc2fed3cc8e513bdfb15c85a99d25f75126adf3ad549677b38f183e37478dc80ed42824c0557d9edf069edc39ef514d52d32e6351c2b4c
