@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.5.7 (20 Feb 2013)
+
+  20 Feb 2013; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *noscript-2.6.5.6 (13 Feb 2013)
 
   13 Feb 2013; Martin Väth <martin@mvath.de>
